--- a/stylesheets/navigation.css
+++ b/stylesheets/navigation.css
@@ -22,7 +22,7 @@
 }
 
 .topbar_nav__link {
-  color: green;
+  color: #d35400;
   text-decoration: none;
   transition-property: all;
   transition-duration: 0.7s;
